Fix whitespace gap on footer
https://github.com/geekplux/hexo-theme-typing/issues/29

--- a/source/css/source.css
+++ b/source/css/source.css
@@ -42,6 +42,7 @@ body {
   position: relative;
   box-sizing: border-box;
   color: $black-light;
+  background: inherit;
 }
 
 body, h1, h2, h3, h4, h5, h6 {
